2016-01-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Remove circular dependency between base and misc. Fixes build with some
	environments.

	* misc/kb.h, misc/kb_redis.c: Move to base/

	* base/nvti.c, base/nvticache.c: Use g_warning() instead of
	log_legacy_write().

	* misc/CMakeLists.txt: Remove kb_redis.c and kb.h.

	* COPYING: Adjust files names.

	* base/CMakeLists.txt: Add kb_redis.c and kb.h.

	* misc/plugutils.c, misc/plugutils.h, nasl/nasl.c,
	nasl/nasl_builtin_nmap.c, nasl/nasl_global_ctxt.h: Fix includes.

2015-12-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (do_nasl_ssh_disconnect): Free ssh channel.
	(exec_ssh_cmd, nasl_ssh_shell_open): Remove superfluous function calls.
	(nasl_ssh_shell_close): New function.

	* nasl/nasl_ssh.h: Add function prototype.

	* nasl/nasl_init.c (libfuncs): Add ssh_shell_close.

2015-12-09  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl.c (main): Fix typo in usage information.

2015-12-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (exec_ssh_cmd_alarm, request_ssh_shell_alarm): New
	functions.
	(exec_ssh_cmd, request_ssh_shell): Use SIGALRM to work-around LibSSH
	calling poll() with an infinite timeout.

2015-12-01  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (find_session_id): Rename to verify_session_id. Take
	session_id as parameter instead of lex_ctxt.
	(nasl_ssh_get_sock, nasl_ssh_set_login, nasl_ssh_userauth)
	(nasl_ssh_request_exec, nasl_ssh_get_issue_banner)
	(nasl_ssh_get_server_banner, nasl_ssh_get_host_key)
	(nasl_ssh_get_auth_methods, nasl_ssh_shell_open, nasl_ssh_shell_read)
	(nasl_ssh_shell_write): Adjust modified function call.

2015-11-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Fix left-over file descriptors in the connections table with ssh
	sockets. Reported by Sebastien Aucouturier.

	* misc/network.c (release_connection_fd): Add parameter to specify
	whether socket was already closed.